# backoffice

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  ARCHITECTURE.md  AUDIT_REPORT.md  CLAUDE.md  CLEANUP_SUMMARY.md  Dockerfile  EXTERNALIZATION_SUMMARY.md  Makefile  PROMPT_EXTERNALIZATION_SUMMARY.md  README.md  alembic.ini  config.py  docker-compose.yml  main.py  opencode.jsonc  pyproject.toml  pytest.ini  requirements.txt  tree.txt
.claude/: agents  output-styles
.claude/commands/: flows  ide
.github/ISSUE_TEMPLATE/: config.yml  ebook-generation.md  ebook-generation.yaml  ebook-generation.yml
.github/scripts/: generate_ebook.py  parse_issue.py  upload_to_drive.py  validate_theme.py
.github/workflows/: ci.yml  create-pr.yml  ebook-generation-test.yml  ebook-generation.yml
.opencode/command/: 01_onboard_generate_agent.md  01_onboard_generate_command.md  01_onboard_generate_prd.md  01_onboard_generate_readme.md  01_onboard_generate_rules.md  02_context_create_user_stories.md  02_context_flows_execute.md  02_context_flows_extract_custom.md  02_context_flows_generate_flow.md  02_context_flows_research_flow.md  02_context_tech_research.md  03_plan_elaborate.md  03_plan_tasks.md  04_code_implement.md  05_review_review_code.md  05_review_review_functional.md  06_tests_gherkinize.md  06_tests_list_untested.md  06_tests_tdd.md  06_tests_write.md  07_documentation_jira_info.md  07_documentation_learn.md  07_documentation_mermaid.md  07_documentation_refresh_memory_bank.md  08_deploy_commit.md  08_deploy_create_github_pull_request.md  08_deploy_tag.md  09_refactor_performance.md  09_refactor_security.md  10_maintenance_add_logging.md  10_maintenance_assert.md  10_maintenance_audit.md  10_maintenance_bug_finder.md  10_maintenance_debug.md  10_maintenance_new_issue.md
aidd_docs/: CATALOG.md  CONTRIBUTING.md  README.md
aidd_docs/memory/: architecture.md  codebase_map.md  coding_assertions.md  project_brief.md  testing.md  vcs.md
aidd_docs/tasks/: 2025_01_06-ddd_bounded_contexts_refactoring.md  2025_01_19_global_code_review.review.md  2025_01_19_packaging_fix_updated.review.md  2025_01_21_implemented_enhanced_ebook_system.review.md  2025_01_27_coloring_book_fixes_and_improvements.review.md  2025_09_21-sommaire_chapitres_ebook.md  2025_09_26-square_format_coloring_ebooks.md  2025_10_01-add-three-coloring-themes.md  2025_11_15-christmas_creepy_cute_theme.md  2025_11_24-image_edit_button.md  2025_12_12_codebase_audit_report.md  2026_02_09_cover_title_footer_overlay.review.md  2026_03_12_react_migration.review.md  MIGRATION_STATUS.md
config/: README.md
config/auth/: allowed_emails.yaml
config/branding/: audiences.yaml  identity.yaml
config/business/: limits.yaml
config/generation/: models.yaml
config/kdp/: specifications.yaml
config/publishing/: legal.yaml
docs/: ARCHITECTURE_GUIDE.md  CI_WORKFLOW.md  FEATURE_MIGRATION_GUIDE.md  LOCAL_STORAGE.md  config_guide.md
docs/memory-bank/: AGENTS.md  AGENTS_COORDINATION.md  CODEBASE_STRUCTURE.md  CODING.md  DEPLOYMENT.md  PROJECT_BRIEF.md  STACK.md
docs/rules/: RULES_INDEX.md
docs/tasks/: 2025_01_06-ddd_lite_mvp_refactoring.md  2025_01_06-ebook_folder_grouping.md  2025_01_15_provider_refactoring_kdp_compliance.review.md  2025_01_19_critical_fixes_review.review.md  2025_01_19_e2e_tests_review.review.md  2025_01_19_htmx_refactoring.review.md  2025_01_19_template_fixes_refactoring.review.md  2025_01_21_enhanced_ebook_generation.review.md  2025_09_18-makefile_basic_commands.md  2025_09_21-pdf_front_cover.md  2025_09_21_pdf_generation_feature.review.md  2025_09_22_ebook_list_pagination.md  2025_09_22_modular_pdf_generation.review.md  2025_09_22_pagination_feature.review.md  2025_09_24-ebook_validation_and_svg_generation.md  2025_09_24_ebook_validation_workflow.review.md  2025_09_29-theme_based_coloring_generation.md  2025_09_30_theme_based_generation.review.md  2025_10_04-migrate-to-feature-architecture.md  2025_10_04_multi_provider_image_generation.review.md  2025_10_28-theme_detection_agent.md  2025_10_28-theme_detection_agent_CORRECTED.md  2025_10_29-orchestrator_interface.md  2025_11_15-kdp_dual_export_interface.md  2025_11_15_kdp_barcode_positioning_fix.review.md  2025_11_17-cleanup_pyproject_ignores.md  2025_11_17-move_shared_code_to_features.md  2025_11_17-remove_cost_tracking.md  2025_11_24-page_edit_modal.md  2025_12_02-page_edit_modal.md  2025_12_07-add_new_pages.md  2025_12_08_species_profiles_semantic_constraints.review.md  2025_12_11-google_oauth_authentication.md  2025_12_17_google_oauth_authentication.review.md  2025_12_30-audience_based_prompt_quality.md  2026_01_08-flux2_prompt_diversity.md  2026_02_26_isbn_ean13_barcode.review.md  2026_03_04-legal_page_kdp_interior.md  2026_03_10-react_migration_htmx.md  MIGRATION_COMPLETE.md
domain/entities/: ebook.py  user.py
domain/models/: user.py
domain/ports/: drive_repository.py  ebook_repository.py  user_repository_port.py
domain/services/: auth_service.py
domain/usecases/: get_ebooks.py  get_stats.py
frontend/: index.html  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx
infrastructure/: database.py  exceptions.py  logging.py
infrastructure/adapters/: fastapi_dashboard.py  google_drive_repository.py  in_memory_ebook_repository.py
infrastructure/api/: dependencies.py
infrastructure/models/: user_model.py
infrastructure/services/: auth_service.py
migrations/: env.py
migrations/versions/: e064f772d88b_initial_migration.py
presentation/routes/: __init__.py  auth.py  dashboard.py  dependencies.py  drive_routes.py  ebook_routes.py
presentation/templates/: dashboard.html  login.html
scripts/: verify_cover_overlay.py
specs/: ebook-1.yaml  example-ebook.yaml
src/backoffice/: conftest.py  main.py
static/css/: dashboard.css  login.css
static/js/: dashboard.js
templates/: dashboard.html  login.html
tests/: conftest.py
tests/e2e/: README.md  conftest.py  conftest_simple.py  fakes.py  scenarios_helpers.py  (+7 more)
themes/: dinosaurs.yml  neutral-default.yml  pirates.yml  unicorns.yml
(+705 files in other folders)
