[project]
name = "backoffice"
version = "0.1.0"
description = "Backoffice pour la gestion des ebooks"

# === Dépendances runtime (tout ce que ton app importe en prod) ===
dependencies = [
  # API & serveur
  "fastapi>=0.104.1",
  "uvicorn>=0.24.0",

  # Templating & uploads (utilisées indirectement par Starlette)
  "jinja2>=3.1.2",
  "python-multipart>=0.0.6",
  "aiofiles>=23.2.1",

  # Modèles & validation
  "pydantic[email]>=2.4.2",

  # Authentification & sécurité (auth not currently used, kept for future)
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-dotenv>=1.0.0",

  # Base de données (drivers sync + async)
  "sqlalchemy>=2.0.23",
  "psycopg2-binary>=2.9.9",  # Sync driver
  "asyncpg>=0.29.0",         # Async driver for PostgreSQL

  # Clients externes (tu les utilises côté app)
  "openai>=1.58.1",  # Updated for httpx 0.28+ compatibility
  "google-auth>=2.27.0",
  "google-api-python-client>=2.118.0",

  # Local image generation (Stable Diffusion)
  "diffusers>=0.30.0",
  "torch>=2.0.0",
  "transformers>=4.30.0",
  "accelerate>=0.20.0",
  "sentencepiece>=0.2.0",  # Required for FLUX tokenizer
  "controlnet-aux>=0.0.7",  # ControlNet preprocessors (lineart, canny, etc.)

  # PDF Generation & Image Processing
  "weasyprint>=61.0",
  "pillow>=10.0.0",
  "img2pdf>=0.5.0",
  "numpy>=1.24.0",

  # HTTP client for external API calls
  "httpx>=0.25.1",

  # Retry logic for API calls
  "tenacity>=9.0.0",

  # YAML parsing for theme configuration
  "pyyaml>=6.0",

  # NOTE: ajoute "google-auth-oauthlib" seulement si tu fais un vrai flow OAuth web.
]

[project.optional-dependencies]
dev = [
  # Lint / format / type / analyse
  "ruff==0.7.1",
  "mypy==1.18.1",
  "vulture==2.14",
  "deptry==0.23.1",

  # Stubs (typing only)
  "types-psutil",
  "types-python-jose",
  "types-passlib",
  "types-requests",
  "types-python-dateutil",
  "types-pyyaml",
  "types-pillow",

  # Tests & e2e
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
  "playwright==1.55.0",
  "pytest-playwright==0.7.1",
  "testcontainers>=4.0.0",

  # Outils dev
  "pre-commit==3.5.0",

  # Libs utilisées seulement en dev/tests
  "psutil>=7.0.0",      # utilitaires tests
  "alembic==1.12.1",    # migrations via CLI (pas besoin en runtime si pas appelées in-app)
  # "google-auth-oauthlib>=1.2.0",  # active-la ici si tu testes un flow OAuth en dev
]

# --- BUILD (Hatch) ---
[tool.hatch.build.targets.wheel]
packages = ["src/backoffice"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# --- Ruff (≥0.4) ---
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
exclude = [".vulture_whitelist.py", "test_local_sd.py"]

[tool.ruff.format]

[tool.ruff.lint]
select = ["E","W","F","I","B","C4","UP","S"]
ignore = []


[tool.ruff.lint.isort]
known-first-party = ["backoffice"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603", "S607", "S104", "E501", "E402"]  # Allow subprocess usage, binding, long lines, late imports in root tests
"**/tests/**" = ["S101", "E501"]  # Allow asserts and long lines in ALL test directories
"src/backoffice/main.py" = ["S104"]  # Allow 0.0.0.0 binding when explicitly configured
"src/backoffice/features/shared/infrastructure/adapters/potrace_vectorizer.py" = ["S603", "S607", "S314"]  # Allow subprocess calls for external tool integration and XML parsing
"src/backoffice/features/ebook/shared/infrastructure/adapters/potrace_vectorizer.py" = ["S603", "S607", "S314"]  # Allow subprocess calls for external tool integration and XML parsing
"src/backoffice/features/shared/infrastructure/providers/*.py" = ["S101", "F821", "E501"]  # Allow asserts, undefined names from dynamic imports, long lines in docstrings
"src/backoffice/features/ebook/shared/infrastructure/providers/*.py" = ["S101", "F821", "E501"]  # Allow asserts for type narrowing, undefined names from dynamic imports, long lines
"src/backoffice/migrations/**" = ["E501"]  # Allow long lines in alembic migrations (auto-generated code)

# --- Mypy ---
[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
exclude = ["scripts/", "tests/", "features/.*/tests/"]
disallow_untyped_defs = false
warn_unused_ignores = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["googleapiclient.*", "google.oauth2", "google.oauth2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["weasyprint"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["backoffice.infrastructure.adapters.repositories.*"]
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = ["replicate", "torch", "diffusers", "controlnet_aux", "huggingface_hub", "tenacity"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["backoffice.features.shared.infrastructure.providers.*"]
disable_error_code = ["import-not-found", "override", "arg-type", "assignment", "union-attr", "no-any-return", "return-value", "attr-defined", "redundant-cast"]

[[tool.mypy.overrides]]
module = ["backoffice.features.shared.infrastructure.services.*"]
disable_error_code = ["arg-type", "union-attr", "dict-item"]

[[tool.mypy.overrides]]
module = ["backoffice.features.shared.infrastructure.adapters.*"]
disable_error_code = ["arg-type", "assignment", "union-attr", "return-value", "attr-defined"]

[[tool.mypy.overrides]]
module = ["backoffice.features.ebook.export.*"]
disable_error_code = ["redundant-cast"]

[[tool.mypy.overrides]]
module = ["img2pdf"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "pytest", "testcontainers.*"]
ignore_missing_imports = true



# --- Deptry ---
[tool.deptry]
exclude = ["tests", "features/**/tests", "migrations", "scripts", "alembic", ".venv", "venv", "monenv", ".pytest_cache", ".mypy_cache", "build", "dist", "node_modules", ".github/scripts"]

# Specify dev dependency groups (so deptry ignores them)
pep621_dev_dependency_groups = ["dev"]

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src/backoffice/features"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Ignore common non-test directories
norecursedirs = [
    ".*",
    "build",
    "dist",
    "*.egg",
    "venv",
    "__pycache__",
    "migrations",
    "static",
    "templates"
]

# Ignore internal package imports
known_first_party = ["backoffice"]

# Per-rule ignores for dependencies used indirectly by frameworks
[tool.deptry.per_rule_ignores]
DEP002 = [
    "jinja2",           # Used by FastAPI for templating
    "python-multipart", # Used by FastAPI for form data
    "aiofiles",         # Used by FastAPI for static files
    "psycopg2-binary",  # Used by SQLAlchemy via connection string
    "asyncpg",          # Used by SQLAlchemy async via connection string (postgresql+asyncpg://)
    "transformers",     # Used by diffusers/torch for local SD (optional, imported dynamically)
    "accelerate",       # Used by diffusers for model loading optimization (optional)
    "sentencepiece",    # Used by transformers for tokenization (optional)
]
DEP003 = [
    "backoffice",       # This is the local package, not a dependency
]
DEP004 = [
    "alembic",          # Used in migrations (dev tool but imported in migration files)
    "pytest",           # Used in feature tests (tests inside features/ folder)
]
DEP001 = [
    "tests",            # Test fakes imported conditionally for E2E tests (via USE_FAKE_PROVIDERS env)
]

# Déclare les mappings nom PyPI -> package importable
[tool.deptry.package_module_name_map]
"google-api-python-client" = "googleapiclient"
"python-jose"              = "jose"
"psycopg2-binary"          = "psycopg2"
"pillow"                   = "PIL"
